--- a/payment_bank_debit/wizard/export_direct_debit_wizard.xml
+++ b/payment_bank_debit/wizard/export_direct_debit_wizard.xml
@@ -9,7 +9,7 @@
                 <group name="group_top">
                     <group name="group_top_left">
                         <field name="payment_acquirer_id" options="{'no_create': True, 'no_create_edit':True}" />
-                        <field name="payment_mode" options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('payment_acquirer_id', '=', False)]}"/>
+                        <field name="payment_mode_id" options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('payment_acquirer_id', '=', False)]}"/>
                         <field name="file_date" options="{'format': 'DD/MM/YYYY'}" />
                         <field name="imputation_business_days" />
                     </group>
