remove debug mode

--- a/payment_bank_debit/wizard/export_direct_debit_wizard.xml
+++ b/payment_bank_debit/wizard/export_direct_debit_wizard.xml
@@ -29,7 +29,6 @@
         binding_model="account.move"
         binding_views="list"
         view_mode="form"
-        target="new"
-         />
+        target="new" />
 
 </odoo>
