--- a/l10n_ar_reports_withholding/report/account_ar_withholding_line_view.xml
+++ b/l10n_ar_reports_withholding/report/account_ar_withholding_line_view.xml
@@ -73,7 +73,7 @@
     </record>
 
     <record id="action_account_ar_withholding_line" model="ir.actions.act_window">
-        <field name="name">Resumen Retenciones</field>
+        <field name="name">Resumen Retenciones de Ganancias</field>
         <field name="res_model">account.ar.withholding.line</field>
         <field name="view_mode">pivot,tree</field>
         <field name="context">{'search_default_posted': 1, 'search_default_filter_date_last_month':
