--- a/l10n_ar_liquidaciones/report/report_invoice_liquidacion.xml
+++ b/l10n_ar_liquidaciones/report/report_invoice_liquidacion.xml
@@ -5,13 +5,12 @@
         <template id="report_invoice_document" inherit_id="account.report_invoice_document">
             <t t-set="o" t-value="o.with_context(lang=lang)" />
             <xpath expr="//table[@name='invoice_line_table']//thead//tr[1]//th[3]" position="after">
-                <th t-if="o.l10n_latam_document_type_id_code in ['43','45','46','48','60','61','63','64','65']"
-                    name="th_commission">
-                    <span>Comisión</span>
+                <th name="th_commission">
+                    <span>Com./Bon.</span>
                 </th>
             </xpath>
             <xpath expr="//table[@name='invoice_line_table']//tbody//tr[1]//td[3]" position="after">
-                <td class="text-right" t-if="o.l10n_latam_document_type_id_code in ['43','45','46','48','60','61','63','64','65']">
+                <td class="text-right">
                     <span t-field="o.currency_id.symbol" />
                     <span t-field="line.commission" />
                 </td>
